plugins {
    id 'fabric-loom' version '1.10-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

fabricApi {
    configureDataGeneration()
}

loom {
    accessWidenerPath = file("src/main/resources/spv_addon.accesswidener")
}


repositories {


    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }
    maven { url = 'https://maven.maxhenkel.de/repository/public' }
    maven { name = 'BlameJared Maven'; url = 'https://maven.blamejared.com' }
    maven { name = "Ladysnake Mods"; url = 'https://maven.ladysnake.org/releases' }
    maven { name = "Terraformers"; url = "https://maven.terraformersmc.com/" }
    maven { url = "https://api.modrinth.com/maven" }
    //Simple Voice Chat
    maven {
        url = 'https://maven.maxhenkel.de/repository/public'
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:1.20.1+build.1:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation files('lib/spb-revamped-1.20.1-1.1.4.jar')

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation("foundry.veil:Veil-fabric-${project.minecraft_version}:${project.veil_version}") {
        transitive = false
    }
    include("foundry.veil:Veil-fabric-${project.minecraft_version}:${project.veil_version}") {
        transitive = false
    }

    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}"

    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
    include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
    include "dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}"

    modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")

    implementation "de.maxhenkel.voicechat:voicechat-api:2.5.0"
    modImplementation "maven.modrinth:simple-voice-chat:fabric-${voicechat_version}"

    modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
    include "maven.modrinth:midnightlib:${project.midnightlib_version}"

    modImplementation("software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}")
    implementation("com.eliotlash.mclib:mclib:20")
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version
    }
}

def targetJavaVersion = 17
tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        it.options.release.set(targetJavaVersion)
    }
}

java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
    withSourcesJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}
